--- a/Nounki/src/app/app.component.html
+++ b/Nounki/src/app/app.component.html
@@ -1,8 +1,5 @@
 <div id="container">
-  <a href="#"><img src="assets/img/Logo.jpg" alt="Logo" id="logo"></a>
-  <ul class="navigation">
-    <li><a href="#">Nounki</a></li>
-    <li><a href="https://www.etsy.com/nl/shop/Nounkie"><img src="assets/img/Etsy.png" id="etsy"></a></li>
-    <li><a href="https://www.instagram.com/nounkiee/">Socials</a></li>
-  </ul>
+  <h1>Nounki</h1>
+  <div>
+  </div>
 </div>
