--- a/Nounki/src/app/app.component.css
+++ b/Nounki/src/app/app.component.css
@@ -1,47 +1,8 @@
 #container{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
     height: 120px;
     background-color: #d4bee5;
 }
-#logo{
-    height: 120px;
-    width: 150px;
-}
-#etsy{
-    
-    height: 90px
-}
-.navigation{
-  grid-column: -1;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: flex-end;
-
-  list-style: none;
-  margin: 0; 
-
-}
-
-.navigation a {
-    text-decoration: none;
-    display: block;
-    padding: 1em;
-    color: white;
-    font-size: 25px;
-}
-@media all and (max-width: 600px) {
-.navigation {
-    flex-flow: column wrap;
-    padding: 0;
-}
-.navigation a { 
-    text-align: center; 
-    padding: 10px;
-    border-top: 1px solid rgba(255, 255, 255,0.3); 
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1); 
-}
-.navigation li:last-of-type a {
-    border-bottom: none;
-}
+h1{
+    text-align: center;
+    padding-top: 30px;
 }
