--- a/Nounki/src/app/app.component.css
+++ b/Nounki/src/app/app.component.css
@@ -1,8 +1,1 @@
-#container{
-    height: 120px;
-    background-color: #d4bee5;
-}
-h1{
-    text-align: center;
-    padding-top: 30px;
-}
+@import url('https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css');
